amend list style

--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -10,10 +10,11 @@
   border-radius: 10px;
   display: flex;
 }
-.input {
+
+.input-text {
   margin: 0;
 }
-.input-cross {
+.input-text-cross {
   color: grey;
   text-decoration: line-through;
 }
