--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -2,19 +2,25 @@
   margin: 0;
   padding: 0;
 }
-.list {
-  margin: 10px;
-  padding: 2px 10px;
-  width: 250px;
+.item {
+  margin: 5px 0 10px 0;
+  padding: 5px 10px;
+  width: 100%;
   border: 2px solid black;
   border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.item__todo {
   display: flex;
 }
 
 .input-text {
-  margin: 0;
+  margin: 5px;
 }
 .input-text-cross {
+  margin: 5px;
   color: grey;
   text-decoration: line-through;
 }
