--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -6,6 +6,7 @@
   margin: 5px 0 10px 0;
   padding: 5px 10px;
   width: 100%;
+  height: 3em;
   border: 2px solid black;
   border-radius: 10px;
   display: flex;
